fix(factors): 修复技术指标计算与因子分析算法
- 修复RSI14计算器，改用Wilder EMA标准实现，正确处理初始值和迭代计算
- 更新涨停计数器，按板块区分涨停阈值（科创板/创业板20%，北交所30%，主板10%）
- 修复ATR20计算，使用标准定义的21根K线计算20个真实波幅值
- 排除已退市股票参与数据统计，修正MySQL查询条件
- 修复Spearman相关系数计算，正确处理并列值的平均排名法
- 实现因子衰减分析功能，计算多期前向收益的IC衰减规律
- 优化ClickHouse OPTIMIZE FINAL操作，增加超时设置防止大表合并超时